APP NAME CHANGED

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -7,7 +7,7 @@
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
 
     <title>
-      Exchange Rate Inquirer
+      Exchange Rates Service v0.0.1
     </title>
   </head>
   <body>
